--- a/App/templates/staff/login.html
+++ b/App/templates/staff/login.html
@@ -7,10 +7,10 @@
 {% block content %}
 <form class="p-3 vw-100 vh-100 my-bg-3" method="post" action="{{url_for('staff_login')}}">
     <div class="d-flex bg-white m-0 row w-100 h-100 shadow rounded-3">
-        <div class="bg col-5 p-0 rounded-3 shadow">
-        </div>
+            <div class="bg col-5 p-0 rounded-3 shadow">
+            </div>
         <div class="col-7 p-5">
-            <div class="h3 text-center">Welcome to Cyon Hotel</div>
+            <div class="h3 text-center">Welcome to Hotel T&T</div>
             <div class="container" style="width: 100%">
                 <div class="input-group shadow-sm my-3 bg-white rounded-2">
                                     <span class="input-group-text border-0 rounded-0 my-icon-input bg-transparent">
