--- a/App/templates/admin/index.html
+++ b/App/templates/admin/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 {% if current_user.is_authenticated and current_user.user_role.value == 1 %}
-<h2>Chào {{current_user.name}},</h2>
+
 <form class="d-flex justify-content-evenly">
     <label class="my-auto m-2" for="month">Chọn tháng cần thống kê</label>
     <select class="m-2 px-3" required class="form-select" name="month" id="month" aria-label="Tháng">
@@ -10,7 +10,7 @@
         {% if m+1 == month %}
         <option value={{m+1}} selected>{{m+1}}</option>
         {% else %}
-        <option value={{m+1}}>{{m+1}}</option>
+        <option value={{m+1}}>{{m+1}}</option>F
         {% endif %}
         {% endfor %}
     </select>
@@ -77,7 +77,7 @@
              alt="admin">
     </div>
     <form class="col-12 col-md-5" method="post" action="{{url_for('signin_admin')}}">
-        <h1 class="text-center text-primary">Welcome to Cyon Admin</h1>
+        <h1 class="text-center text-primary">Welcome to Hotel T&T with Admin</h1>
         <div class="mb-3 mt-3">
 
             <input type="text" class="form-control" id="username" placeholder="Tên đăng nhập" name="username" required/>
