--- a/App/templates/staff/layout/nav.html
+++ b/App/templates/staff/layout/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-0">
     <div class="container-fluid">
         <a class="navbar-brand h1 text-uppercase font-title" href="#">
-            Cyon Hotel
+           Hotel T&T
         </a>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapsibleNavbar">
